Fix index background style on mobile (ios) devices

--- a/public/themes/default/assets/styles/main.less
+++ b/public/themes/default/assets/styles/main.less
@@ -41,6 +41,14 @@ body.status {
   }
 }
 
+img.background {
+  position: fixed;
+  right: 0;
+  height: calc(100vh);
+  top: calc(50vh);
+  transform: translateY(calc(-50vh));
+}
+
 h1 {
   margin-bottom: 20px;
 }
